[package]
name = "lib-bitcoind-accessor"
version = "0.2.1"
authors = ["Gabriel Comte <gabriel.comte@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = { git = "https://github.com/gcomte/rust-bitcoincore-rpc" }

tokio = { version =  "1.7.1", features = ["full", "time"] }
serde = { version = "1.0.126", features = ["derive"] }
config = "0.11.0"
log = "0.4.14"
env_logger = "0.8.4"

[dev-dependencies]
# used for integration tests
serde_json = "1.0.64"
