[package]
name = "lib-bitcoind-rpc-block-syncer"
version = "0.2.4"
authors = ["Gabriel Comte <gabriel.comte@gmail.com>"]
edition = "2021"
rust-version = "1.57.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = { git = "https://github.com/gcomte/rust-bitcoincore-rpc" }

tokio = { version =  "1.15.0", features = ["full", "time"] }
serde = { version = "1.0.133", features = ["derive"] }
config = "0.11.0"
log = "0.4.14"
env_logger = "0.9.0"

[dev-dependencies]
# used for integration tests
serde_json = "1.0.73"
